--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^0.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "resolve-url-loader": "^2.0.0",
     "style-loader": "^0.13.2"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "internal-ip": "^1.2.0",
